--- a/App1/App1/MasterPage.xaml
+++ b/App1/App1/MasterPage.xaml
@@ -4,10 +4,6 @@
              xmlns:local="clr-namespace:App1"
              x:Class="App1.MasterPage"
              Title="功能清單">
-
-  <Label x:Name="lbWelcome" Text="Welcome to Xamarin Forms!"
-   VerticalOptions="Center"
-   HorizontalOptions="Center" />
     <StackLayout
       Orientation="Vertical"
       VerticalOptions="FillAndExpand">
@@ -32,42 +28,51 @@
           HorizontalOptions="Start" VerticalOptions="CenterAndExpand"
                     />
       </StackLayout>
-      <ListView x:Name="listView" VerticalOptions="FillAndExpand" SeparatorVisibility="None">
-        <ListView.ItemTemplate>
-          <DataTemplate>
-            <ViewCell>
-              <ViewCell.View>
-                <Grid
-                  VerticalOptions="Center"
-                  Padding="10,5,10,5"
+      <Grid>
+        <Grid.RowDefinitions>
+          <RowDefinition Height="26" />
+          <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <Label x:Name="lbWelcome" Grid.Row="0" Text="Welcome to Xamarin Forms!"
+   VerticalOptions="Center"
+   HorizontalOptions="Center" />
+        <ListView x:Name="listView" Grid.Row="1" VerticalOptions="FillAndExpand" SeparatorVisibility="None">
+          <ListView.ItemTemplate>
+            <DataTemplate>
+              <ViewCell>
+                <ViewCell.View>
+                  <Grid
+                    VerticalOptions="Center"
+                    Padding="10,5,10,5"
                   >
-                  <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="30" />
-                    <ColumnDefinition Width="260" />
-                  </Grid.ColumnDefinitions>
-                  <Grid.RowDefinitions>
-                    <RowDefinition Height="*"/>
-                  </Grid.RowDefinitions>
-                  <Label
-                    Grid.Row="0" Grid.Column="0"
-                    Text ="{Binding Icon, Mode=TwoWay}"
-                    FontSize="25"
-                    FontFamily="FontAwesome"
-                    VerticalTextAlignment="Center"
-                    HorizontalOptions="Start" VerticalOptions="CenterAndExpand"
+                    <Grid.ColumnDefinitions>
+                      <ColumnDefinition Width="30" />
+                      <ColumnDefinition Width="260" />
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                      <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+                    <Label
+                      Grid.Row="0" Grid.Column="0"
+                      Text ="{Binding Icon, Mode=TwoWay}"
+                      FontSize="25"
+                      FontFamily="FontAwesome"
+                      VerticalTextAlignment="Center"
+                      HorizontalOptions="Start" VerticalOptions="CenterAndExpand"
                     />
-                  <Label
-                    Grid.Row="0" Grid.Column="1"
-                    Text ="{Binding Title, Mode=TwoWay}"
-                    FontSize="25"
-                    VerticalTextAlignment="Center"
-                    HorizontalOptions="Start" VerticalOptions="CenterAndExpand"
+                    <Label
+                      Grid.Row="0" Grid.Column="1"
+                      Text ="{Binding Title, Mode=TwoWay}"
+                      FontSize="25"
+                      VerticalTextAlignment="Center"
+                      HorizontalOptions="Start" VerticalOptions="CenterAndExpand"
                     />
-                </Grid>
-              </ViewCell.View>
-            </ViewCell>
-          </DataTemplate>
-        </ListView.ItemTemplate>
-      </ListView>
+                  </Grid>
+                </ViewCell.View>
+              </ViewCell>
+            </DataTemplate>
+          </ListView.ItemTemplate>
+        </ListView>
+      </Grid>
     </StackLayout>
 </ContentPage>
