--- a/App1/App1/LoginPage/LoginPage.xaml
+++ b/App1/App1/LoginPage/LoginPage.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="App1.LoginPage"
+             x:Class="App1.LoginPage.LoginPage"
              Title="登入者頁面">
   <Label Text="{Binding MainText}" VerticalOptions="Center" HorizontalOptions="Center" />
  <Grid
