--- a/App1/App1/NavigationDemo/DetailView4.xaml
+++ b/App1/App1/NavigationDemo/DetailView4.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="App1.DetailView4"
+             x:Class="App1.NavigationDemo.DetailView4"
              Title="堆疊與捲動版面配置">
   <Label Text="{Binding MainText}" VerticalOptions="Center" HorizontalOptions="Center" />
   <StackLayout
