--- a/App1/App1/TabPage/TabPage.xaml
+++ b/App1/App1/TabPage/TabPage.xaml
@@ -2,7 +2,7 @@
 <TabbedPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:App1"
-             x:Class="App1.TabPage"
+             x:Class="App1.TabPage.TabPage"
             Title="標籤式的樣板頁面"
             >
   <Label Text="{Binding MainText}" VerticalOptions="Center" HorizontalOptions="Center" />
